; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_proceed_to_async_paging.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_proceed_to_async_paging.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_block_decoder = type { i64 }
%struct.pt_block = type { i32 }
%struct.pt_event = type { %struct.TYPE_4__, i64 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@pte_internal = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pt_block_decoder*, %struct.pt_block*, %struct.pt_event*)* @pt_blk_proceed_to_async_paging to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pt_blk_proceed_to_async_paging(%struct.pt_block_decoder* %0, %struct.pt_block* %1, %struct.pt_event* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pt_block_decoder*, align 8
  %6 = alloca %struct.pt_block*, align 8
  %7 = alloca %struct.pt_event*, align 8
  %8 = alloca i32, align 4
  store %struct.pt_block_decoder* %0, %struct.pt_block_decoder** %5, align 8
  store %struct.pt_block* %1, %struct.pt_block** %6, align 8
  store %struct.pt_event* %2, %struct.pt_event** %7, align 8
  %9 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %5, align 8
  %10 = icmp ne %struct.pt_block_decoder* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load %struct.pt_event*, %struct.pt_event** %7, align 8
  %13 = icmp ne %struct.pt_event* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %11, %3
  %15 = load i32, i32* @pte_internal, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %48

17:                                               ; preds = %11
  %18 = load %struct.pt_event*, %struct.pt_event** %7, align 8
  %19 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 1, i32* %4, align 4
  br label %48

23:                                               ; preds = %17
  %24 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %5, align 8
  %25 = load %struct.pt_block*, %struct.pt_block** %6, align 8
  %26 = load %struct.pt_event*, %struct.pt_event** %7, align 8
  %27 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @pt_blk_proceed_to_ip_with_trace(%struct.pt_block_decoder* %24, %struct.pt_block* %25, i64 %30)
  store i32 %31, i32* %8, align 4
  %32 = load i32, i32* %8, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %23
  %35 = load i32, i32* %8, align 4
  store i32 %35, i32* %4, align 4
  br label %48

36:                                               ; preds = %23
  %37 = load %struct.pt_block_decoder*, %struct.pt_block_decoder** %5, align 8
  %38 = getelementptr inbounds %struct.pt_block_decoder, %struct.pt_block_decoder* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = load %struct.pt_event*, %struct.pt_event** %7, align 8
  %41 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = icmp eq i64 %39, %44
  %46 = zext i1 %45 to i64
  %47 = select i1 %45, i32 1, i32 0
  store i32 %47, i32* %4, align 4
  br label %48

48:                                               ; preds = %36, %34, %22, %14
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i32 @pt_blk_proceed_to_ip_with_trace(%struct.pt_block_decoder*, %struct.pt_block*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
